--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,5 @@
     <string name="image_has_been_deleted">Image has been deleted</string>
     <string name="add_avatar_from_gallery">Select an avatar from the galery</string>
     <string name="add_avatar_from_camera">Take a photo</string>
+    <string name="accept_friend_request">Accept friend request</string>
 </resources>
